<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="cn.xfz.passwordbox.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item android:id="@+id/action_import"
        android:title="@string/action_import"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item android:id="@+id/action_export"
        android:title="@string/action_export"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item android:id="@+id/action_about"
        android:title="@string/action_about"
        android:orderInCategory="100"
        app:showAsAction="never"/>
</menu>
